# yaskawa-robots

./: .canon.yaml  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.py  meta.json.in
.github/workflows/: docker.yml  main.yml
src/kinematics/: gp12.json  gp180-120.json  gp35l.json  gp35l.urdf
src/viam/example/: main.cpp
src/viam/lib/: logger.cpp  logger.hpp  protocol.h  robot_socket.cpp  robot_socket.hpp  scope_guard.hpp  trajectory_logger.cpp  trajectory_logger.hpp  yaskawa_controller_state.cpp  yaskawa_controller_state_connected.cpp  yaskawa_controller_state_disconnected.cpp  yaskawa_controller_state_events.cpp  yaskawa_controller_state_independent.cpp  yaskawa_controller_state_ready.cpp
src/viam/lib/test/: broadcast_log_parser_test.cpp  controller_integration_test.cpp  fake_server.cpp  fake_server.hpp  fault_injection_test.cpp  realtime_trajectory_logger_test.cpp
src/viam/module/: main.cpp  utils.cpp  utils.hpp  yaskawa_arm.cpp  yaskawa_arm.hpp  yaskawa_arm_config.hpp.in  yaskawa_arm_state.cpp  yaskawa_arm_state.hpp  yaskawa_arm_state_disconnected.cpp  yaskawa_arm_state_events.cpp  yaskawa_arm_state_independent.cpp  yaskawa_arm_state_ready.cpp
src/viam/module/test/: move_limit_test.cpp
